<resources>
    <string name="app_name">来到服务版</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="status_text_empty">当前暂无记录</string>
    <string name="retry">重试</string>
    <string name="loading">加载中</string>
    <string name="not_connect">当前网络状况不佳</string>
    <string name="main_home">服务</string>
    <string name="main_help">客服</string>
    <string name="main_order">订单</string>
    <string name="main_mine">我的</string>
    <string name="main_circle">圈子</string>
    <string name="main_wallet">钱包</string>
    <string name="main_deal_order">接单</string>
    <string name="all">全部</string>
    <string name="wait_pay">待支付</string>
    <string name="wait_comment">待评价</string>
    <string name="complete">已完成</string>
    <string name="login">登录</string>
    <string name="edit_verify">请输入验证码</string>
    <string name="edit_phone">请输入手机号</string>
    <string name="feedback">反馈</string>
    <string name="about_us">关于我们</string>
    <string name="check_update">检查更新</string>
    <string name="exit_login">退出登录</string>
    <string name="setting">设置</string>
    <string name="message">消息</string>
    <string name="store">店铺</string>
    <string name="prompt">提示</string>
    <string name="send_captcha">获取验证码</string>
    <string name="input_phone">输入手机号</string>
    <string name="next">下一步</string>
    <string name="input_captcha">输入手机验证码</string>
    <string name="re_send_captcha">重新发送验证码</string>
    <string name="completing_info">完善账户信息</string>
    <string name="login_now">立即登录</string>
    <string name="edit_psw">请输入密码</string>
    <string name="show_psw">显示密码</string>
    <string name="new_regist">新用户注册</string>
    <string name="set_nickname">设置账户昵称</string>
    <string name="talk_later">以后再说</string>
    <string name="input_pwd">设置登录密码(不少于6位)</string>
    <string name="input_pwd_again">再次输入密码</string>
    <string name="reset_pwd">设置新密码</string>
    <string name="reset_pwd_success">设置密码成功</string>
    <string name="wait_go">待出发</string>
    <string name="finished">已完成</string>
    <string name="nickname">名称</string>
    <string name="phone_number">手机号</string>
    <string name="email">邮箱</string>
    <string name="sex">性别</string>
    <string name="no_function">功能暂未开通</string>
    <string name="login_success">登录成功</string>
    <string name="upload_card_img_tip">上传要求: \n ·请上传真实身份证照片 \n ·图片质量请保证清晰可见</string>
    <string name="identify">身份识别</string>
    <string name="photo_choose_fail">选择照片失败，请重试</string>
    <string name="update_success">修改成功</string>
    <string name="nickname_not_right">昵称格式不正确</string>
    <string name="please_input_right_email">邮箱格式不正确</string>
    <string name="order_status">订单状态:</string>
    <string name="serve_fee">服务金额</string>
    <string name="door_serve_fee">上门费用</string>
    <string name="extra_fee">其他费用</string>
    <string name="total">总计</string>
    <string name="contact_store">联系商家</string>
    <string name="go_pay">去支付</string>
    <string name="order_detail">订单详情</string>
    <string name="change_order">去改约</string>
    <string name="confirm_go">确认出发</string>
    <string name="confirm_finish">确认完成</string>
    <string name="change_time">改约时间</string>
    <string name="address">地址</string>
    <string name="name">姓名</string>
    <string name="commit_change_time">提交改约</string>
    <string name="total_money">总资产</string>
    <string name="already_finish">已完工</string>
    <string name="ing">进行中</string>
    <string name="order_empty">您还没有相关订单</string>
    <string name="no_network">当前无网络连接，请稍后再试</string>
    <string name="wrong_qr_code">对不起，该二维码无效</string>
</resources>
