<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/night_blue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/completing_info"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size" />

        <include
            android:id="@+id/back"
            layout="@layout/back_black" />
    </RelativeLayout>

    <EditText
        android:id="@+id/complete_info_nickname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_height"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:singleLine="true"
        android:hint="@string/set_nickname"
        android:textColorHint="@color/common_dark"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin" />

    <include layout="@layout/split_line_margin" />

    <EditText
        android:id="@+id/complete_info_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_height"
        android:background="@color/white"
        android:singleLine="true"
        android:hint="@string/input_pwd"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin" />

    <include layout="@layout/split_line_margin" />

    <EditText
        android:id="@+id/complete_info_pwd_again"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_height"
        android:background="@color/white"
        android:singleLine="true"
        android:hint="@string/input_pwd_again"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin" />

    <include layout="@layout/shadow_line" />

    <Button
        style="@style/button_style"
        android:onClick="setPwdInfo"
        android:text="@string/yes" />

    <TextView
        android:id="@+id/talk_later"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/talk_later"
        android:textColor="@color/night_blue" />
</LinearLayout>