<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/night_blue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/reset_pwd"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size" />

        <include
            android:id="@+id/back"
            layout="@layout/back_white" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="请为账户设置一个新密码"
        android:textColor="@color/common_gray" />

    <EditText
        android:id="@+id/reset_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_height"
        android:background="@color/white"
        android:singleLine="true"
        android:hint="@string/input_pwd"
        android:textColorHint="@color/common_dark"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin" />

    <include layout="@layout/split_line_margin" />

    <EditText
        android:id="@+id/reset_pwd_again"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_height"
        android:background="@color/white"
        android:singleLine="true"
        android:hint="@string/input_pwd_again"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin" />

    <include layout="@layout/shadow_line" />
    <Button
        style="@style/button_style"
        android:onClick="resetPwd"
        android:text="@string/yes" />
</LinearLayout>