<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/main_blue">

        <include layout="@layout/back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="个人资料"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size" />
    </RelativeLayout>

    <include layout="@layout/split_area" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/activity_horizontal_margin_end"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="头像"
            android:textSize="@dimen/dimens_16sp" />

        <ImageView
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:src="@mipmap/default_pic" />
    </LinearLayout>

    <include layout="@layout/split_line"/>
    <LinearLayout
        android:id="@+id/info_nickname_area"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/activity_horizontal_margin_end"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textSize="@dimen/dimens_16sp"/>
        <TextView
            android:id="@+id/info_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="未填写"
            android:textColor="@color/common_gray"/>

        <include layout="@layout/layout_next"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/info_mobile_area"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/activity_horizontal_margin_end"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="@dimen/dimens_16sp"/>
        <TextView
            android:id="@+id/info_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="未填写"
            android:textColor="@color/common_gray"/>

        <include layout="@layout/layout_next"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/info_email_area"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/activity_horizontal_margin_end"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="@dimen/dimens_16sp"/>
        <TextView
            android:id="@+id/info_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="未填写"
            android:textColor="@color/common_gray"/>

        <include layout="@layout/layout_next"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/info_sex_area"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/activity_horizontal_margin_end"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textSize="@dimen/dimens_16sp"/>
        <TextView
            android:id="@+id/info_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="未填写"
            android:textColor="@color/common_gray"/>

        <include layout="@layout/layout_next"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/info_birthday_area"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/activity_horizontal_margin_end"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textSize="@dimen/dimens_16sp"/>
        <TextView
            android:id="@+id/info_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="未填写"
            android:textColor="@color/common_gray"/>

        <include layout="@layout/layout_next"/>
    </LinearLayout>

</LinearLayout>